--- a/src/components/home/heromain/Heromain.module.css
+++ b/src/components/home/heromain/Heromain.module.css
@@ -194,8 +194,8 @@
 
 .arrows button {
     border: none;
-    background:#fd0b2f;
-    color: #fff;
+    background:#ffffff;
+    color: #f60808;
     width: 40px;
     height: 47px;
     border-radius: 50%;
