--- a/src/components/about/aboutheros/Abouthero.module.css
+++ b/src/components/about/aboutheros/Abouthero.module.css
@@ -217,14 +217,18 @@
 
   .title {
       font-size: 18px;
+      margin-left: 50px;
   }
 
   .subtitle {
       font-size: 16px;
+      margin-left: 40px;
   }
 
   .description {
       font-size: 12px;
+      margin-left: 90px;
+      text-align: center;
   }
 
   .flower {
