--- a/src/components/about/section/Section.module.css
+++ b/src/components/about/section/Section.module.css
@@ -176,8 +176,11 @@
   .container {
       margin: 1rem;
       padding: 1.5rem;
+     
   }
-
+.container1{
+  padding-top: 10px;
+}
   .main {
       flex-direction: column;
       gap: 1.5rem;
@@ -232,18 +235,27 @@
 /* Mobile Devices (max-width: 480px) */
 @media (max-width: 480px) {
   .container {
-      margin: 0.5rem;
+      margin: 0.1rem;
       /* padding: 1rem; */
   }
 
   .container1 {
-      padding-top: 20px;
+      padding-top: 10px;
+      width: 100%;
+      padding: 1px;
   }
-
+  .heartIcon{
+    margin-top: -200px;
+  }
   .main {
-      gap: 1rem;
+      /* gap: 1rem;
+      padding-top: 10px; */
+      padding: 1px;
+      /* width: 120%; */
   }
-
+  .media{
+    margin-top: -130px;
+  }
   .imagemain {
       width: 100%;
       height: 18vh;
