--- a/src/components/home/testimonials/Testimonials.module.css
+++ b/src/components/home/testimonials/Testimonials.module.css
@@ -96,23 +96,80 @@
     }
   }
   
-  /* Responsive Design */
-  @media (max-width: 600px) {
-    .testimonialContainer {
-      flex-direction: column;
-      text-align: center;
-      margin-left: 0;
-    }
-  
-    .imageContainer {
-      width: 100%;
-      height: 40vh;
-    }
-  
-    .textContainer {
-      max-width: 100%;
-      text-align: center;
-      padding: 10px;
-    }
+/* Responsive Design */
+@media (max-width: 1024px) {
+  .testimonialContainer {
+    flex-direction: column;
+    text-align: center;
+    max-width: 100%;
+    padding: 15px;
   }
-  
+
+  .imageContainer {
+    width: 80%;
+    max-width: 100%;
+    height: auto;
+  }
+
+  .textContainer {
+    max-width: 90%;
+    text-align: center;
+    padding: 15px;
+  }
+}
+
+@media (max-width: 768px) {
+  .testimonialContainer {
+    max-width: 100%;
+    padding: 10px;
+    gap: 10px;
+  }
+
+  .imageContainer {
+    width: 90%;
+  }
+
+  .textContainer {
+    max-width: 100%;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .text {
+    font-size: 16px;
+  }
+
+  .button {
+    font-size: 12px;
+    padding: 8px 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .testimonialContainer {
+    /* width: 100%; */
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px;
+    gap: 5px;
+  }
+
+  .imageContainer {
+    width: 100%;
+    /* max-width:; */
+  }
+
+  .textContainer {
+    padding: 10px;
+    text-align: justify;
+  }
+
+  .text {
+    font-size: 14px;
+  }
+
+  .button {
+    font-size: 12px;
+    padding: 6px 12px;
+  }
+}
