--- a/src/components/bride/profilecard/Profilecard.module.css
+++ b/src/components/bride/profilecard/Profilecard.module.css
@@ -76,11 +76,12 @@ width: 45%;
 /* styles.module.css */
 
 .mains_same {
-  width: 169px;
+  width: 179px;
   margin-left: 50px;
   margin-top: 10px;
   height: 40px;
-  border-radius: 5px;
+  border-radius: 8px;
+  border-color: white;
   padding: 10px 25px;
   font-family: 'Lato', sans-serif;
   font-weight: 500;
@@ -109,11 +110,12 @@ width: 45%;
 /* Submit text inside button */
 .submit {
   position: absolute;
-  /* top: 45%; */
+ 
   left: 44%;
   transform: translate(-50%, -50%);
   color: #fff;
   font-size: 14px;
+  border-color: #fff;
   font-weight: 500;
   text-align: center;
   z-index: 1;
